--- a/AvoidAGrabCutEasy/frmAvoidAGrabCutEasy.resx
+++ b/AvoidAGrabCutEasy/frmAvoidAGrabCutEasy.resx
@@ -157,4 +157,7 @@
   <metadata name="backgroundWorker4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>616, 17</value>
   </metadata>
+  <metadata name="timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>515, 49</value>
+  </metadata>
 </root>
