--- a/OutlineOperations/frnOutlineOperations.resx
+++ b/OutlineOperations/frnOutlineOperations.resx
@@ -153,4 +153,7 @@
   <metadata name="backgroundWorker3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>342, 58</value>
   </metadata>
+  <metadata name="backgroundWorker6.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>660, 48</value>
+  </metadata>
 </root>
